src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail46.jova
class Test{

}
class Main {

  public int main() {
      int x;
      Test test;
      test = new Test;
      x = 3;

      while (test){
        x = 4;
       }
       return 0;

    }
}

